syntax = "proto3";

package com.demo.dfs.namenode.rpc;//必须一样

option java_multiple_files = true;
option java_package = "com.demo.dfs.rpc.model";
option java_outer_classname = "NameNodeRpcModel";

message RegisterRequest {
	string ip = 1;
	string hostname = 2;
}

message RegisterResponse {
	int32 status = 1;
}

message HeartbeatRequest {
	string ip = 1;
	string hostname = 2;
}

message HeartbeatResponse {
	int32 status = 1;
}

message MkdirRequest {
	string path = 1;
}

message MkdirResponse {
	int32 status = 1;
}